# test-universal-config

./: README.md  pom.xml
universal-config/: pom.xml  pyproject.toml
universal-config/src/resources/configurations/ci/: aws-credentials.properties
universal-config/src/universal_config/: __init__.py  config_reader.py
universal-config/tests/: test_universal_config.py
universal-config/tests/features/: reference-src.feature
universal-config/tests/features/steps/: reference_src.py
